add background video

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <video autoplay muted loop id="video-background">
+    <source src="assets/images/fondo.mp4" type="video/mp4">
+  </video>
   <app-root></app-root>
 </body>
 </html>
